--- a/public/html/index.html
+++ b/public/html/index.html
@@ -84,11 +84,11 @@
   <div class="w3-center w3-padding-32">
     <div class="w3-bar">
       <a onClick="previousPage()" class="w3-bar-item w3-button w3-hover-black">«</a>
-      <a href="#page1" class="w3-bar-item w3-black w3-button">1</a>
-      <a href="#page2" class="w3-bar-item w3-button w3-hover-black">2</a>
-      <a href="#page3" class="w3-bar-item w3-button w3-hover-black">3</a>
-      <a href="#page4" class="w3-bar-item w3-button w3-hover-black">4</a>
-      <a href="#nextPage" class="w3-bar-item w3-button w3-hover-black">»</a>
+      <a href="/page1" class="w3-bar-item w3-black w3-button">1</a>
+      <a href="/page2" class="w3-bar-item w3-button w3-hover-black">2</a>
+      <a href="/page3" class="w3-bar-item w3-button w3-hover-black">3</a>
+      <a href="/page4" class="w3-bar-item w3-button w3-hover-black">4</a>
+      <a href="/nextPage" class="w3-bar-item w3-button w3-hover-black">»</a>
     </div>
   </div>
 
