--- a/public/html/index.html
+++ b/public/html/index.html
@@ -99,11 +99,11 @@
 <script>
     // Script to open and close sidebar
     function w3_open() {
-      $("#mySidebar").style.display = "block";
+      document.getElementById("mySidebar").style.display = "block";
     }
 
     function w3_close() {
-      $("#mySidebar").style.display = "none";
+      document.getElementById("#mySidebar").style.display = "none";
     }
 
     function previousPage(){
