--- a/public/html/index.html
+++ b/public/html/index.html
@@ -103,7 +103,7 @@
     }
 
     function w3_close() {
-      document.getElementById("#mySidebar").style.display = "none";
+      document.getElementById("mySidebar").style.display = "none";
     }
 
     function previousPage(){
