--- a/public/html/index.html
+++ b/public/html/index.html
@@ -15,16 +15,16 @@
 
 <!-- Sidebar (hidden by default) -->
 <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button">Close Menu</a>
-  <a href="#food" onclick="w3_close()" class="w3-bar-item w3-button">Food</a>
-  <a href="/recepies" onclick="w3_close()" class="w3-bar-item w3-button">My Recepies</a>
+  <a href="javascript:void(0)" onclick="closeMenu()" class="w3-bar-item w3-button">Close Menu</a>
+  <a href="#food" onclick="closeMenu()" class="w3-bar-item w3-button">Food</a>
+  <a href="/recepies" onclick="closeMenu()" class="w3-bar-item w3-button">My Recepies</a>
 </nav>
 
 <!-- Top menu -->
 <div class="w3-top">
   <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
-    <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
-    <div class="w3-center w3-padding-16">My Food</div>
+    <div class="w3-button w3-padding-16 w3-left" onclick="openMenu()">☰</div>
+    <div class="w3-center w3-padding-16">Book of the Cooking</div>
   </div>
 </div>
 
@@ -98,11 +98,11 @@
 
 <script>
     // Script to open and close sidebar
-    function w3_open() {
+    function openMenu() {
       document.getElementById("mySidebar").style.display = "block";
     }
 
-    function w3_close() {
+    function closeMenu() {
       document.getElementById("mySidebar").style.display = "none";
     }
 
