--- a/public/html/index.html
+++ b/public/html/index.html
@@ -24,6 +24,7 @@
 <div class="w3-top">
   <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
     <div class="w3-button w3-padding-16 w3-left" onclick="openMenu()">☰</div>
+    <div class="w3-right"> <img src="/public/images/cookbooklogo.png" style="width:auto;height:68px"> </div>
     <div class="w3-center w3-padding-16">Book of the Cooking</div>
   </div>
 </div>
