--- a/public/html/addRecipe.html
+++ b/public/html/addRecipe.html
@@ -14,10 +14,10 @@
     <div id="request">
       <label>Dish</label>
       <input id="dish" name="dish" type="text" /><br>
-      <label>Name</label>
-      <input id="name" name="title" type="text"/><br>
-      <label for = "age">Age:</label>
-      <input type = "number"  id="age" name ="ages" min = "0" max = "99">
+      <div>Recipes</div>
+      <label for="text box"></label>
+      <textarea id="text box" name="comments" rows="7" cols="20">
+      </textarea>
       <br>
 
       <input id="fileStuff" type="file" name="filetoupload"><br>
@@ -27,7 +27,7 @@
       <input id="updateButton" type="button" value="Update" />
       <input id="deleteButton" type="button" value="Delete" />-->
     </div>
-    <script src="js/home.js"></script>
+    <script src="../js/addRecipe.js"></script>
 
 
   </body>
