--- a/public/html/addRecipe.html
+++ b/public/html/addRecipe.html
@@ -19,6 +19,17 @@
       <textarea id="text box" name="comments" rows="7" cols="20">
       </textarea>
       <br>
+      <label>Category</label>
+      <select id = "residence" name="residence">
+                            <option selected = "selected" value="NA">NA</option>
+                            <option value = "Breakfast">Breakfast</option>
+                            <option value = "Lunch">Lunch</option>
+                            <option value = "Dinner">Dinner</option>
+                            <option value = "Dessert">Dessert</option>
+                            <option value = "Snack">Snack</option>
+                            <option value = "Drink">Drink</option>
+                        </select>
+                        <br>
 
       <input id="fileStuff" type="file" name="filetoupload"><br>
 
