--- a/public/html/addRecipe.html
+++ b/public/html/addRecipe.html
@@ -20,7 +20,7 @@
       </textarea>
       <br>
       <label>Category</label>
-      <select id = "residence" name="residence">
+      <select id = "category" name="category">
             <option selected = "selected" value="NA">NA</option>
             <option value = "Breakfast">Breakfast</option>
             <option value = "Lunch">Lunch</option>
