--- a/public/html/addRecipe.html
+++ b/public/html/addRecipe.html
@@ -15,8 +15,8 @@
       <label>Dish</label>
       <input id="dish" name="dish" type="text" /><br>
       <div>Recipes</div>
-      <label for="text box"></label>
-      <textarea id="text box" name="comments" rows="7" cols="20">
+      <label for="Recipes"></label>
+      <textarea id="Recipes" name="Recipes" rows="7" cols="20">
       </textarea>
       <br>
       <label>Category</label>
