--- a/public/html/index.html
+++ b/public/html/index.html
@@ -3,7 +3,7 @@
 <title>My Cookbook</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" text="text/css" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
 <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <link rel="icon" type="image/png" href="/public/images/cookbooklogo.png">
