--- a/public/html/addRecipe.html
+++ b/public/html/addRecipe.html
@@ -14,10 +14,8 @@
     <div id="request">
       <label>Dish</label>
       <input id="dish" name="dish" type="text" /><br>
-      <div>Recipes</div>
-      <label for="Recipes"></label>
-      <textarea id="Recipes" name="Recipes" rows="7" cols="20">
-      </textarea>
+      <label for="Ingredients">Ingredients</label><br>
+      <textarea id="ingredients" name="ingredients" rows="7" cols="20"></textarea>
       <br>
       <label>Category</label>
       <select id = "category" name="category">
