--- a/public/html/addRecipe.html
+++ b/public/html/addRecipe.html
@@ -17,6 +17,9 @@
       <label for="Ingredients">Ingredients</label><br>
       <textarea id="ingredients" name="ingredients" rows="7" cols="20"></textarea>
       <br>
+      <label for="directions">Directions</label><br>
+      <textarea id="directions" name="directions" rows="7" cols="20"></textarea>
+      <br>
       <label>Category</label>
       <select id = "category" name="category">
             <option selected = "selected" value="NA">NA</option>
