--- a/public/html/addRecipe.html
+++ b/public/html/addRecipe.html
@@ -29,7 +29,7 @@
         </select>
         <br>
 
-      <input id="fileStuff" type="file" name="filetoupload"><br>
+      <input id="imageStuff" type="file" accept="image/*" name="imagetoupload"><br>
 
       <input id="addRecipe" type="button" value="Add Recipe" />
     <!--  <input id="createButton" type="button" value="Create" />
