--- a/public/html/addRecipe.html
+++ b/public/html/addRecipe.html
@@ -14,7 +14,7 @@
     <div id="request">
       <label>Dish</label>
       <input id="dish" name="dish" type="text" /><br>
-      <label for="Ingredients">Ingredients</label><br>
+      <label for="ingredients">Ingredients</label><br>
       <textarea id="ingredients" name="ingredients" rows="7" cols="20"></textarea>
       <br>
       <label for="directions">Directions</label><br>
