--- a/public/html/addRecipe.html
+++ b/public/html/addRecipe.html
@@ -4,14 +4,37 @@
   <head>
     <title>Ajax</title>
     <meta charset="utf-8"/>
+    <link rel="stylesheet" text="text/css" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
     <style type="text/css">
-
+        body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
+        .w3-bar-block .w3-bar-item {padding:20px}
     </style>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   </head>
 
   <body>
-    <div id="request">
+
+    <!-- Sidebar (hidden by default) -->
+    <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
+      <a href="javascript:void(0)" onclick="closeMenu()" class="w3-bar-item w3-button">Close Menu</a>
+      <a href="/home" onclick="closeMenu()" class="w3-bar-item w3-button">Home</a>
+      <a href="/recipe" onclick="closeMenu()" class="w3-bar-item w3-button">My Recipes</a>
+      <a href="/add" onclick="closeMenu()" class="w3-bar-item w3-button">Add Recipes</a>
+    </nav>
+
+    <!-- Top menu -->
+    <div class="w3-top">
+      <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
+        <div class="w3-button w3-padding-16 w3-left" onclick="openMenu()">☰</div>
+        <div class="w3-right"> <img src="/public/images/cookbooklogo.png" style="width:auto;height:68px"> </div>
+        <div class="w3-center w3-padding-16">Book of the Cooking</div>
+      </div>
+    </div>
+
+
+
+    <div id="request" style="margin-top:100px">
       <label>Dish</label>
       <input id="dish" name="dish" type="text" /><br>
       <label for="ingredients">Ingredients</label><br>
@@ -34,13 +57,26 @@
 
       <input id="imageStuff" type="file" accept="image/*" name="imagetoupload"><br>
 
-      <input id="addRecipe" type="button" value="Add Recipe" />
+      <input id="addRecipe" type="button" value="Add Recipe" onclick="location.href='/recipe'">
     <!--  <input id="createButton" type="button" value="Create" />
       <input id="updateButton" type="button" value="Update" />
       <input id="deleteButton" type="button" value="Delete" />-->
     </div>
     <script src="../js/addRecipe.js"></script>
 
+    <script type="text/javascript">
+          // Script to open and close sidebar
+          function openMenu() {
+            $("#mySidebar").css("display","block");
+          }
 
+          function closeMenu() {
+            $("#mySidebar").css("display","none");
+          }
+
+          function previousPage(){
+            console.log("Go Previous");
+          }
+    </script>
   </body>
 </html>
