--- a/public/html/addRecipe.html
+++ b/public/html/addRecipe.html
@@ -19,7 +19,7 @@
     <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
       <a href="javascript:void(0)" onclick="closeMenu()" class="w3-bar-item w3-button">Close Menu</a>
       <a href="/home" onclick="closeMenu()" class="w3-bar-item w3-button">Home</a>
-      <a href="/recipe" onclick="closeMenu()" class="w3-bar-item w3-button">My Recipes</a>
+      <a href="/myRecipes" onclick="closeMenu()" class="w3-bar-item w3-button">My Recipes</a>
       <a href="/add" onclick="closeMenu()" class="w3-bar-item w3-button">Add Recipes</a>
     </nav>
 
