--- a/public/html/home.html
+++ b/public/html/home.html
@@ -17,7 +17,7 @@
 <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
   <a href="javascript:void(0)" onclick="closeMenu()" class="w3-bar-item w3-button">Close Menu</a>
   <a href="/home" onclick="closeMenu()" class="w3-bar-item w3-button">Home</a>
-  <a href="/recipe" onclick="closeMenu()" class="w3-bar-item w3-button">My Recipes</a>
+  <a href="/myRecipes" onclick="closeMenu()" class="w3-bar-item w3-button">My Recipes</a>
   <a href="/add" onclick="closeMenu()" class="w3-bar-item w3-button">Add Recipes</a>
 </nav>
 
@@ -81,21 +81,6 @@
       <p>Lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
     </div>
   </div>
-
-  <!-- Pagination -->
-  <div class="w3-center w3-padding-32">
-    <div class="w3-bar">
-      <a onClick="previousPage()" class="w3-bar-item w3-button w3-hover-black">«</a>
-      <a href="/page1" class="w3-bar-item w3-black w3-button">1</a>
-      <a href="/page2" class="w3-bar-item w3-button w3-hover-black">2</a>
-      <a href="/page3" class="w3-bar-item w3-button w3-hover-black">3</a>
-      <a href="/page4" class="w3-bar-item w3-button w3-hover-black">4</a>
-      <a href="/nextPage" class="w3-bar-item w3-button w3-hover-black">»</a>
-    </div>
-  </div>
-
-
-<!-- End page content -->
 </div>
 
 <script>
@@ -108,9 +93,6 @@
       $("#mySidebar").css("display","none");
     }
 
-    function previousPage(){
-      console.log("Go Previous");
-    }
 
 </script>
 
