--- a/public/html/recipeDisplay.html
+++ b/public/html/recipeDisplay.html
@@ -23,22 +23,7 @@
           body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
           .w3-bar-block .w3-bar-item {padding:20px}
       </style>
-      <script src="https://code.jquery.com/jquery-2.1.3.min.js">
-
-            // Script to open and close sidebar
-            function openMenu() {
-              $("#mySidebar").css("display","block");
-            }
-
-            function closeMenu() {
-              $("#mySidebar").css("display","none");
-            }
-
-            function previousPage(){
-              console.log("Go Previous");
-            }
-
-      </script>
+      <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   </head>
 
   <body>
@@ -65,8 +50,8 @@
       <div class="grid-container" style="margin-top:100px">
           <div class="grid-item">1</div>
           <div class="grid-item">2</div>
-          <div class="grid-item">3</div>
           <!--
+          <div class="grid-item">3</div>
           <div class="grid-item">4</div>
           <div class="grid-item">5</div>
           <div class="grid-item">6</div>
