--- a/public/html/displayRecipe.html
+++ b/public/html/displayRecipe.html
@@ -9,7 +9,7 @@
       <style type="text/css">
           .grid-container{
             display:grid;
-            grid-template-columns: auto auto auto;
+            grid-template-columns: auto auto;
             background-color: #2196F3;
             padding: 10px;
           }
@@ -18,6 +18,13 @@
             border: 1px solid rgba(0, 0, 0, 0.8);
             padding: 20px;
             font-size: 30px;
+            text-align: center;
+          }
+          .grid-title {
+            background-color: rgba(255, 255, 255, 0.8);
+            border: 1px solid rgba(0, 0, 0, 0.8);
+            padding: 5px;
+            font-size: 50px;
             text-align: center;
           }
           body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
@@ -33,7 +40,7 @@
       <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
         <a href="javascript:void(0)" onclick="closeMenu()" class="w3-bar-item w3-button">Close Menu</a>
         <a href="/home" onclick="closeMenu()" class="w3-bar-item w3-button">Home</a>
-        <a href="/recipe" onclick="closeMenu()" class="w3-bar-item w3-button">My Recipes</a>
+        <a href="/myRecipes" onclick="closeMenu()" class="w3-bar-item w3-button">My Recipes</a>
         <a href="/add" onclick="closeMenu()" class="w3-bar-item w3-button">Add Recipes</a>
       </nav>
 
@@ -48,11 +55,14 @@
 
 
       <div class="grid-container" style="margin-top:100px">
-          <div class="grid-item">1</div>
-          <div class="grid-item">2</div>
-          <!--
-          <div class="grid-item">3</div>
+          <div class="grid-title">Ingredients</div>
+          <div class="grid-title">Directions</div>
+
+          <div class="grid-item">
+            <ul id="ingredients"></ul>
+          </div>
           <div class="grid-item">4</div>
+          <!--
           <div class="grid-item">5</div>
           <div class="grid-item">6</div>
           <div class="grid-item">7</div>
@@ -71,9 +81,21 @@
               $("#mySidebar").css("display","none");
             }
 
-            function previousPage(){
-              console.log("Go Previous");
-            }
+            $(document).ready(function(){
+
+                $.get("/getIngredients",null,null);
+                {
+                //handle to a newly created list item.
+                    var list_item = document.createElement("li");
+                    list_item.textContent = ;
+
+                //handle to the unordered list element.
+                    var list = document.getElementById("list");
+                    list.appendChild(list_item);
+                    list_input.value = "";
+                }
+            });
+
       </script>
 
   </body>
