--- a/public/html/home.html
+++ b/public/html/home.html
@@ -62,7 +62,7 @@
   <div class="w3-row-padding w3-padding-16 w3-center">
     <div class="w3-quarter">
       <img src="/w3images/popsicle.jpg" alt="Popsicle" style="width:100%">
-      <h3>All I Need Is a Popsicle</h3>
+      <h3><a href="/show">All I Need Is a Popsicle</a></h3>
       <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
     </div>
     <div class="w3-quarter">
