--- a/public/html/addRecipe.html
+++ b/public/html/addRecipe.html
@@ -63,7 +63,16 @@
       <input id="imageStuff" type="file" accept="image/*" name="imagetoupload"><br>
       <br>
 
-      <input id="addRecipe" type="button" value="Add Recipe" onclick="location.href='/recipe'">
+      <input id="addRecipe" type="button" value="Add Recipe" style="font-size:30px" class="button" onclick="location.href='/recipe'">
+      <style>
+.button {
+  background-color: #0000FF;
+height: 100px;
+width: 200px;
+}
+</style>
+
+
     </div>
 
 
@@ -86,6 +95,7 @@
           function previousPage(){
             console.log("Go Previous");
           }
+
     </script>
   </body>
 </html>
