--- a/public/html/addRecipe.html
+++ b/public/html/addRecipe.html
@@ -60,17 +60,25 @@
          <br>
 
 
-      <input id="imageStuff" type="file" accept="image/*" name="imagetoupload"><br>
+      <input id="imageStuff" type="file"  accept="image/*" name="imagetoupload" class="custom-file-upload"><br>
       <br>
 
       <input id="addRecipe" type="button" value="Add Recipe" style="font-size:30px" class="button" onclick="location.href='/recipe'">
       <style>
-.button {
-  background-color: #0000FF;
-height: 100px;
-width: 200px;
-}
-</style>
+          .button {
+            background-color: #0000FF;
+          height: 100px;
+          width: 200px;
+          }
+      </style>
+      <style>
+            .custom-file-upload {
+                border: 1px solid #ccc;
+                display: inline-block;
+                padding: 6px 12px;
+                cursor: pointer;
+            }
+      </style>
 
 
     </div>
