--- a/public/html/addRecipe.html
+++ b/public/html/addRecipe.html
@@ -63,7 +63,7 @@
       <input id="imageStuff" type="file" accept="image/*" name="imagetoupload"><br>
       <br>
 
-      <input id="addRecipe" type="button" value="Add Recipe" onclick="location.href='/recipe'">
+      <input id="addRecipe" type="button" value="Add Recipe" onclick="location.href='/myRecipes'">
     </div>
 
 
@@ -71,7 +71,7 @@
       <input id="updateButton" type="button" value="Update" />
       <input id="deleteButton" type="button" value="Delete" />-->
     </div>
-    <script src="../js/addRecipe.js"></script>
+    <script src="../js/uploadFile.js"></script>
 
     <script type="text/javascript">
           // Script to open and close sidebar
