--- a/public/html/displayRecipe.html
+++ b/public/html/displayRecipe.html
@@ -54,6 +54,12 @@
       </div>
 
 
+      <div id="request" style="margin-top:500px">
+    	   <input id="image2Button" type="button" value="Image2" />
+      </div>
+
+      <img id="image1" src="" height="285" width="380">
+
       <div class="grid-container" style="margin-top:100px">
           <div class="grid-title">Ingredients</div>
           <div class="grid-title">Directions</div>
