--- a/public/html/addRecipe.html
+++ b/public/html/addRecipe.html
@@ -60,31 +60,10 @@
          <br>
 
 
-      <input id="imageStuff" type="file"  accept="image/*" name="imagetoupload" class="custom-file-upload"><br>
+      <input id="imageStuff" type="file" accept="image/*" name="imagetoupload"><br>
       <br>
 
-<<<<<<< HEAD
       <input id="addRecipe" type="button" value="Add Recipe" onclick="location.href='/myRecipes'">
-=======
-      <input id="addRecipe" type="button" value="Add Recipe" style="font-size:30px" class="button" onclick="location.href='/recipe'">
-      <style>
-          .button {
-            background-color: #0000FF;
-          height: 100px;
-          width: 200px;
-          }
-      </style>
-      <style>
-            .custom-file-upload {
-                border: 1px solid #ccc;
-                display: inline-block;
-                padding: 6px 12px;
-                cursor: pointer;
-            }
-      </style>
-
-
->>>>>>> c5e573fec1aa791fc6332f1e49b082bf74574758
     </div>
 
 
@@ -107,7 +86,6 @@
           function previousPage(){
             console.log("Go Previous");
           }
-
     </script>
   </body>
 </html>
