--- a/public/html/addRecipe.html
+++ b/public/html/addRecipe.html
@@ -63,8 +63,7 @@
       <input id="imageStuff" type="file" accept="image/*" name="imagetoupload"><br>
       <br>
 
-<<<<<<< HEAD
-      <input id="addRecipe" type="button" value="Add Recipe" style="font-size:30px" class="button" onclick="location.href='/recipe'">
+      <input id="addRecipe" type="button" value="Add Recipe" style="font-size:30px" class="button" onclick="location.href='/myRecipes'">
       <style>
           .button {
             background-color: #0000FF;
@@ -82,9 +81,6 @@
       </style>
 
 
-=======
-      <input id="addRecipe" type="button" value="Add Recipe" onclick="location.href='/myRecipes'">
->>>>>>> b149d9ad9fb09e18ba90a0cb64ed36fcc481cd73
     </div>
 
 
