--- a/public/html/addRecipe.html
+++ b/public/html/addRecipe.html
@@ -33,62 +33,70 @@
     </div>
 
 
+    <form action="fileupload" method="post" enctype="multipart/form-data">
+        <div id="request" style="margin-top:100px">
+          <div class="w3-row-padding w3-padding-16 w3-center" >
 
-    <div id="request" style="margin-top:100px">
-      <div class="w3-row-padding w3-padding-16 w3-center" >
+          <h3>Dish</h3>
 
-      <h3>Dish</h3>
-
-      <input id="dish" name="dish" type="text" /><br>
-       <h3>Ingredients</h3>
-      <textarea id="ingredients" name="ingredients" rows="7" cols="50"></textarea>
-      <br>
-      <h3>Directions</h3>
-      <textarea id="directions" name="directions" rows="7" cols="50"></textarea>
-      <br>
-      <h3>Category</h3>
-      <select id = "category" name="category">
-            <option selected = "selected" value="NA">NA</option>
-            <option value = "Breakfast">Breakfast</option>
-            <option value = "Lunch">Lunch</option>
-            <option value = "Dinner">Dinner</option>
-            <option value = "Dessert">Dessert</option>
-            <option value = "Snack">Snack</option>
-            <option value = "Drink">Drink</option>
-        </select>
-        <br>
-         <br>
-
-
-      <input id="imageStuff" type="file" accept="image/*" name="imagetoupload"><br>
-      <br>
-
-      <input id="addRecipe" type="button" value="Add Recipe" style="font-size:30px" class="button" onclick="location.href='/myRecipes'">
-      <style>
-          .button {
-            background-color: #0000FF;
-          height: 100px;
-          width: 200px;
-          }
-      </style>
-      <style>
-            .custom-file-upload {
-                border: 1px solid #ccc;
-                display: inline-block;
-                padding: 6px 12px
-                cursor: pointer;
-            }
-      </style>
+          <input id="dish" name="dish" type="text" /><br>
+           <h3>Ingredients</h3>
+          <textarea id="ingredients" name="ingredients" rows="7" cols="50"></textarea>
+          <br>
+          <h3>Directions</h3>
+          <textarea id="directions" name="directions" rows="7" cols="50"></textarea>
+          <br>
+          <h3>Category</h3>
+          <select id = "category" name="category">
+                <option selected = "selected" value="NA">NA</option>
+                <option value = "Breakfast">Breakfast</option>
+                <option value = "Lunch">Lunch</option>
+                <option value = "Dinner">Dinner</option>
+                <option value = "Dessert">Dessert</option>
+                <option value = "Snack">Snack</option>
+                <option value = "Drink">Drink</option>
+            </select>
+            <br>
+             <br>
 
 
-    </div>
+          <input id="imageStuff" type="file" accept="image/*" name="imagetoupload"><br>
+          <br>
+
+          <input id="addRecipe" type="submit" value="Add Recipe" style="font-size:30px" class="button" >
+
+<!--onclick="location.href='/myRecipes'"-->
+
+
+          <style>
+              .button {
+                background-color: #0000FF;
+              height: 100px;
+              width: 200px;
+              }
+          </style>
+          <style>
+                .custom-file-upload {
+                    border: 1px solid #ccc;
+                    display: inline-block;
+                    padding: 6px 12px
+                    cursor: pointer;
+                }
+          </style>
+
+
+        </div>
 
 
     <!--  <input id="createButton" type="button" value="Create" />
       <input id="updateButton" type="button" value="Update" />
       <input id="deleteButton" type="button" value="Delete" />-->
-    </div>
-    <script src="../js/uploadFile.js"></script>
+      </div>
+    </form>
+
+
+
+    <script src="js/addRecipe.js"></script>
 
     <script type="text/javascript">
           // Script to open and close sidebar
@@ -100,9 +108,6 @@
             $("#mySidebar").css("display","none");
           }
 
-          function previousPage(){
-            console.log("Go Previous");
-          }
     </script>
   </body>
 </html>
