--- a/public/html/displayRecipe.html
+++ b/public/html/displayRecipe.html
@@ -89,17 +89,16 @@
 
             $(document).ready(function(){
 
-                $.post("/getIngredients",null,null);
-                {
-                //handle to a newly created list item.
-                    var list_item = document.createElement("li");
-                    list_item.textContent = ;
+                $.post("/getRecipe",null,function(data){
+                  //handle to a newly created list item.
+                      var list_item = document.createElement("li");
+                      list_item.textContent = ;
 
-                //handle to the unordered list element.
-                    var list = document.getElementById("list");
-                    list.appendChild(list_item);
-                    list_input.value = "";
-                }
+                  //handle to the unordered list element.
+                      var list = document.getElementById("list");
+                      list.appendChild(list_item);
+                      list_input.value = "";
+                });
             });
 
       </script>
