--- a/public/html/myRecipes.html
+++ b/public/html/myRecipes.html
@@ -51,36 +51,27 @@
 
         <!-- First Photo Grid-->
         <div class="w3-row-padding w3-padding-16 w3-center" id="food">
-          <div class="w3-quarter">
-            <img src="/w3images/sandwich.jpg" alt="Sandwich" style="width:100%">
-            <h3>The Perfect Sandwich, A Real NYC Classic</h3>
-            <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-          </div>
-          <div class="w3-quarter">
-            <img src="/w3images/steak.jpg" alt="Steak" style="width:100%">
-            <h3>Let Me Tell You About This Steak</h3>
-            <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-          </div>
-          <div class="w3-quarter">
-            <img src="/w3images/cherries.jpg" alt="Cherries" style="width:100%">
-            <h3>Cherries, interrupted</h3>
-            <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-            <p>What else?</p>
-          </div>
-          <div class="w3-quarter">
-            <img src="/w3images/wine.jpg" alt="Pasta and Wine" style="width:100%">
-            <h3>Once Again, Robust Wine and Vegetable Pasta</h3>
-            <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-          </div>
+          <a href="" onclick="showRecipe('')" id="link1"><div class="w3-quarter">
+            <img src="" alt="none" style="width:100%;border:30px solid #fff" id="image1">
+            <h3 id="title1">Add Your Recipe</h3>
+          </div></a>
+          <a href="" onclick="showRecipe('')" id="link2"><div class="w3-quarter">
+            <img src="" alt="none" style="width:100%;border:30px solid #fff" id="image2">
+            <h3 id="title2">Add Your Recipe</h3>
+          </div></a>
+          <a href="" onclick="showRecipe('')" id="link3"><div class="w3-quarter">
+            <img src="" alt="none" style="width:100%;border:30px solid #fff" id="image3">
+            <h3 id="title3">Add Your Recipe</h3>
+          </div></a>
+          <a href="" onclick="showRecipe('')" id="link4"><div class="w3-quarter">
+            <img src="" alt="none" style="width:100%;border:30px solid #fff" id="image4">
+            <h3 id="title4">Add Your Recipe</h3>
+          </div></a>
         </div>
 
 
-        <input type="button" onclick="printRecipes()">
-
-
-
-
       <script type="text/javascript">
+            var index = 1;
             // Script to open and close sidebar
             function openMenu() {
               $("#mySidebar").css("display","block");
@@ -89,11 +80,37 @@
             function closeMenu() {
               $("#mySidebar").css("display","none");
             }
+            $(document).ready(function(){
+                for(let i=1;i<5;i++){
+                  $.post("/updateMyRecipes",{index:i},function(data){
+                      $("#title"+i).text(data.dish);
+                      $("#link"+i).attr("onclick","showRecipe('"+data.dish+"')");
+                      $("#link"+i).attr("href","/show");
 
-            function printRecipes(){
-                $.post("printRecipes",{dish:"ab"},null);
+                      if(i==1){
+                        image1.src = data.image;
+                        console.log("here1");
+                      }
+                      else if(i==2){
+                        image2.src = data.image;
+                        console.log("here2");
+                      }
+                      else if(i==3){
+                        image3.src = data.image;
+                        console.log("here3");
+                      }
+                      else if(i==4){
+                        image4.src = data.image;
+                        console.log("here4");
+                      }
+                  });
+                }
+            });
+
+
+            function showRecipe(dishName){
+                $.post("/updateClientRecipe",{dish:dishName},null);
             }
-
       </script>
 
   </body>
