--- a/public/html/myRecipes.html
+++ b/public/html/myRecipes.html
@@ -2,7 +2,7 @@
 <!--   -->
 <html>
   <head>
-      <title>Ajax</title>
+      <title>My Recipes</title>
       <meta charset="utf-8"/>
       <link rel="stylesheet" text="text/css" href="https://www.w3schools.com/w3css/4/w3.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
