WE ARE FINALLY DONE

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -36,20 +36,20 @@
   <!-- First Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center" id="food" >
     <a href="/show" onclick="showRecipe('Tuna Casserole')"><div class="w3-quarter" id="home1">
-      <img src="public/images/Tuna Casserole.jpg" alt="none" style="width:100%;border:30px solid #fff">
+      <img src="public/images/Tuna Casserole.jpg" alt="Tuna Casserole" style="width:100%;border:30px solid #fff">
       <h3>Tuna Casserole</h3>
     </div></a>
-    <a href="/show"><div class="w3-quarter" id="home2">
-      <img src="/w3images/steak.jpg" alt="Steak" style="width:100%">
-      <h3>Let Me Tell You About This Steak</h3>
+    <a href="/show" onclick="showRecipe('Easy Bake Fish')"><div class="w3-quarter" id="home2">
+      <img src="public/images/Easy Bake Fish.jpg" alt="Fish" style="width:100%; border:30px solid #fff">
+      <h3>Easy Bake Fish</h3>
     </div></a>
-    <a href="/show"><div class="w3-quarter" id="home3">
-      <img src="/w3images/cherries.jpg" alt="Cherries" style="width:100%">
-      <h3>Cherries, interrupted</h3>
+    <a href="/show" onclick="showRecipe('Crispy Baked Chicken')"><div class="w3-quarter" id="home3">
+      <img src="public/images/Crispy Baked Chicken.jpg" alt="Chicken" style="width:100%; border:30px solid #fff">
+      <h3>Crispy Baked Chicken</h3>
     </div></a>
-    <a href="/show"><div class="w3-quarter" id="home4">
-      <img src="/w3images/wine.jpg" alt="Pasta and Wine" style="width:100%">
-      <h3>Once Again, Robust Wine and Vegetable Pasta</h3>
+    <a href="/show" onclick="showRecipe('Peanut Butter Banana Smoothie')"><div class="w3-quarter" id="home4">
+      <img src="public/images/Peanut Butter Banana Smoothie.jpg" alt="Peanut Butter Banana Smoothie" style="width:100%; border:30px solid #fff">
+      <h3>Peanut Butter Banana Smoothie</h3>
     </div></a>
   </div>
 
