--- a/public/html/myRecipes.html
+++ b/public/html/myRecipes.html
@@ -34,7 +34,7 @@
         <a href="javascript:void(0)" onclick="closeMenu()" class="w3-bar-item w3-button">Close Menu</a>
         <a href="/home" onclick="closeMenu()" class="w3-bar-item w3-button">Home</a>
         <a href="/myRecipes" onclick="closeMenu()" class="w3-bar-item w3-button">My Recipes</a>
-        <a href="/add" onclick="closeMenu()" class="w3-bar-item w3-button">Add Recipes</a>
+        <a href="/add" onclick="closeMenu()" class="w3-bar-item w3-button">Add Recipe</a>
       </nav>
 
       <!-- Top menu -->
